// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`StatsCommand > execute() > match > jobToComplete > calls discordService.updateDeferredReply with match embeds 1`] = `
[
  "fake-token",
  {
    "embeds": [
      {
        "fields": [
          {
            "inline": false,
            "name": "Eagle",
            "value": "Team Score: 3",
          },
          {
            "inline": true,
            "name": "gamertag05",
            "value": "\`\`\`Rank: 1
Score: 2
Kills: 12
Deaths: 14
Assists: 8
KDA: 0.66
Headshot kills: 6
Shots H:F: 83:178
Accuracy: 46.62%
Damage D:T: 4736:4879
Av life duration: 32s
Av damage/life: 338.29
Captures: 2
Captures assists: 0
Carrier time: 9s
Grabs: 4
Returns: 0
Carriers killed: 0\`\`\`",
          },
          {
            "inline": true,
            "name": "gamertag02",
            "value": "\`\`\`Rank: 2
Score: 1
Kills: 22
Deaths: 15
Assists: 10
KDA: 10.33
Headshot kills: 17
Shots H:F: 108:182
Accuracy: 59.34%
Damage D:T: 5890:4614
Av life duration: 29s
Av damage/life: 392.67
Captures: 1
Captures assists: 2
Carrier time: 20s
Grabs: 14
Returns: 0
Carriers killed: 0\`\`\`",
          },
          {
            "inline": false,
            "name": "
",
            "value": "
",
          },
          {
            "inline": true,
            "name": "gamertag01",
            "value": "\`\`\`Rank: 3
Score: 0
Kills: 16
Deaths: 17
Assists: 12
KDA: 3
Headshot kills: 11
Shots H:F: 122:189
Accuracy: 64.55%
Damage D:T: 5717:5479
Av life duration: 27s
Av damage/life: 336.29
Captures: 0
Captures assists: 1
Carrier time: 11s
Grabs: 14
Returns: 2
Carriers killed: 0\`\`\`",
          },
          {
            "inline": true,
            "name": "gamertag09",
            "value": "\`\`\`Rank: 3
Score: 0
Kills: 17
Deaths: 9
Assists: 6
KDA: 10
Headshot kills: 10
Shots H:F: 84:162
Accuracy: 51.85%
Damage D:T: 3859:3049
Av life duration: 53s
Av damage/life: 428.78
Captures: 0
Captures assists: 3
Carrier time: 22s
Grabs: 15
Returns: 0
Carriers killed: 1\`\`\`",
          },
          {
            "inline": false,
            "name": "
",
            "value": "
",
          },
          {
            "inline": false,
            "name": "Cobra",
            "value": "Team Score: 0",
          },
          {
            "inline": true,
            "name": "gamertag04",
            "value": "\`\`\`Rank: 5
Score: 0
Kills: 19
Deaths: 16
Assists: 6
KDA: 5
Headshot kills: 16
Shots H:F: 134:200
Accuracy: 67%
Damage D:T: 6202:5431
Av life duration: 27s
Av damage/life: 387.63
Captures: 0
Captures assists: 0
Carrier time: 26s
Grabs: 6
Returns: 0
Carriers killed: 0\`\`\`",
          },
          {
            "inline": true,
            "name": "gamertag08",
            "value": "\`\`\`Rank: 5
Score: 0
Kills: 11
Deaths: 21
Assists: 7
KDA: -7.66
Headshot kills: 9
Shots H:F: 99:191
Accuracy: 51.83%
Damage D:T: 4094:5882
Av life duration: 19s
Av damage/life: 194.95
Captures: 0
Captures assists: 0
Carrier time: 
Grabs: 0
Returns: 1
Carriers killed: 0\`\`\`",
          },
          {
            "inline": false,
            "name": "
",
            "value": "
",
          },
          {
            "inline": true,
            "name": "gamertag11",
            "value": "\`\`\`Rank: 5
Score: 0
Kills: 17
Deaths: 16
Assists: 2
KDA: 1.66
Headshot kills: 9
Shots H:F: 81:160
Accuracy: 50.62%
Damage D:T: 3657:4401
Av life duration: 27s
Av damage/life: 228.56
Captures: 0
Captures assists: 0
Carrier time: 1m 3s
Grabs: 6
Returns: 0
Carriers killed: 0\`\`\`",
          },
          {
            "inline": true,
            "name": "gamertag12",
            "value": "\`\`\`Rank: 5
Score: 0
Kills: 8
Deaths: 15
Assists: 5
KDA: -5.33
Headshot kills: 5
Shots H:F: 77:163
Accuracy: 47.23%
Damage D:T: 3859:5057
Av life duration: 29s
Av damage/life: 257.27
Captures: 0
Captures assists: 0
Carrier time: 17s
Grabs: 9
Returns: 0
Carriers killed: 1\`\`\`",
          },
          {
            "inline": false,
            "name": "
",
            "value": "
",
          },
        ],
        "title": "CTF: Empyrean - Ranked",
        "url": "https://halodatahive.com/Infinite/Match/d81554d7-ddfe-44da-a6cb-000000000ctf",
      },
    ],
  },
]
`;

exports[`StatsCommand > execute() > neatqueue > jobToComplete > adds each game to the thread 1`] = `
[
  [
    "fake-thread-id",
    {
      "embeds": [
        {
          "fields": [
            {
              "inline": false,
              "name": "Eagle",
              "value": "Team Score: 3",
            },
            {
              "inline": true,
              "name": "gamertag0500000000000000",
              "value": "\`\`\`Rank: 1
Score: 2
Kills: 12
Deaths: 14
Assists: 8
KDA: 0.66
Headshot kills: 6
Shots H:F: 83:178
Accuracy: 46.62%
Damage D:T: 4736:4879
Av life duration: 32s
Av damage/life: 338.29
Captures: 2
Captures assists: 0
Carrier time: 9s
Grabs: 4
Returns: 0
Carriers killed: 0\`\`\`",
            },
            {
              "inline": true,
              "name": "gamertag0200000000000000",
              "value": "\`\`\`Rank: 2
Score: 1
Kills: 22
Deaths: 15
Assists: 10
KDA: 10.33
Headshot kills: 17
Shots H:F: 108:182
Accuracy: 59.34%
Damage D:T: 5890:4614
Av life duration: 29s
Av damage/life: 392.67
Captures: 1
Captures assists: 2
Carrier time: 20s
Grabs: 14
Returns: 0
Carriers killed: 0\`\`\`",
            },
            {
              "inline": false,
              "name": "
",
              "value": "
",
            },
            {
              "inline": true,
              "name": "gamertag0100000000000000",
              "value": "\`\`\`Rank: 3
Score: 0
Kills: 16
Deaths: 17
Assists: 12
KDA: 3
Headshot kills: 11
Shots H:F: 122:189
Accuracy: 64.55%
Damage D:T: 5717:5479
Av life duration: 27s
Av damage/life: 336.29
Captures: 0
Captures assists: 1
Carrier time: 11s
Grabs: 14
Returns: 2
Carriers killed: 0\`\`\`",
            },
            {
              "inline": true,
              "name": "gamertag0900000000000000",
              "value": "\`\`\`Rank: 3
Score: 0
Kills: 17
Deaths: 9
Assists: 6
KDA: 10
Headshot kills: 10
Shots H:F: 84:162
Accuracy: 51.85%
Damage D:T: 3859:3049
Av life duration: 53s
Av damage/life: 428.78
Captures: 0
Captures assists: 3
Carrier time: 22s
Grabs: 15
Returns: 0
Carriers killed: 1\`\`\`",
            },
            {
              "inline": false,
              "name": "
",
              "value": "
",
            },
            {
              "inline": false,
              "name": "Cobra",
              "value": "Team Score: 0",
            },
            {
              "inline": true,
              "name": "gamertag0400000000000000",
              "value": "\`\`\`Rank: 5
Score: 0
Kills: 19
Deaths: 16
Assists: 6
KDA: 5
Headshot kills: 16
Shots H:F: 134:200
Accuracy: 67%
Damage D:T: 6202:5431
Av life duration: 27s
Av damage/life: 387.63
Captures: 0
Captures assists: 0
Carrier time: 26s
Grabs: 6
Returns: 0
Carriers killed: 0\`\`\`",
            },
            {
              "inline": true,
              "name": "gamertag0800000000000000",
              "value": "\`\`\`Rank: 5
Score: 0
Kills: 11
Deaths: 21
Assists: 7
KDA: -7.66
Headshot kills: 9
Shots H:F: 99:191
Accuracy: 51.83%
Damage D:T: 4094:5882
Av life duration: 19s
Av damage/life: 194.95
Captures: 0
Captures assists: 0
Carrier time: 
Grabs: 0
Returns: 1
Carriers killed: 0\`\`\`",
            },
            {
              "inline": false,
              "name": "
",
              "value": "
",
            },
            {
              "inline": true,
              "name": "gamertag1100000000000000",
              "value": "\`\`\`Rank: 5
Score: 0
Kills: 17
Deaths: 16
Assists: 2
KDA: 1.66
Headshot kills: 9
Shots H:F: 81:160
Accuracy: 50.62%
Damage D:T: 3657:4401
Av life duration: 27s
Av damage/life: 228.56
Captures: 0
Captures assists: 0
Carrier time: 1m 3s
Grabs: 6
Returns: 0
Carriers killed: 0\`\`\`",
            },
            {
              "inline": true,
              "name": "gamertag1200000000000000",
              "value": "\`\`\`Rank: 5
Score: 0
Kills: 8
Deaths: 15
Assists: 5
KDA: -5.33
Headshot kills: 5
Shots H:F: 77:163
Accuracy: 47.23%
Damage D:T: 3859:5057
Av life duration: 29s
Av damage/life: 257.27
Captures: 0
Captures assists: 0
Carrier time: 17s
Grabs: 9
Returns: 0
Carriers killed: 1\`\`\`",
            },
            {
              "inline": false,
              "name": "
",
              "value": "
",
            },
          ],
          "title": "CTF: Empyrean - Ranked",
          "url": "https://halodatahive.com/Infinite/Match/d81554d7-ddfe-44da-a6cb-000000000ctf",
        },
      ],
    },
  ],
  [
    "fake-thread-id",
    {
      "embeds": [
        {
          "fields": [
            {
              "inline": false,
              "name": "Eagle",
              "value": "Team Score: 3",
            },
            {
              "inline": true,
              "name": "gamertag0100000000000000",
              "value": "\`\`\`Rank: 1
Score: 3
Kills: 34
Deaths: 19
Assists: 9
KDA: 18
Headshot kills: 25
Shots H:F: 176:288
Accuracy: 61.11%
Damage D:T: 7701:6740
Av life duration: 25s
Av damage/life: 405.32
Captures: 0
Occupation time: 1m 11s
Secures: 0
Offensive kills: 7
Defensive kills: 4\`\`\`",
            },
            {
              "inline": true,
              "name": "gamertag0200000000000000",
              "value": "\`\`\`Rank: 1
Score: 3
Kills: 20
Deaths: 19
Assists: 18
KDA: 7
Headshot kills: 14
Shots H:F: 136:237
Accuracy: 57.38%
Damage D:T: 6757:6899
Av life duration: 27s
Av damage/life: 355.63
Captures: 0
Occupation time: 44s
Secures: 0
Offensive kills: 2
Defensive kills: 3\`\`\`",
            },
            {
              "inline": false,
              "name": "
",
              "value": "
",
            },
            {
              "inline": true,
              "name": "gamertag0500000000000000",
              "value": "\`\`\`Rank: 1
Score: 3
Kills: 19
Deaths: 18
Assists: 18
KDA: 7
Headshot kills: 10
Shots H:F: 134:265
Accuracy: 50.56%
Damage D:T: 6659:5468
Av life duration: 27s
Av damage/life: 369.94
Captures: 0
Occupation time: 49s
Secures: 0
Offensive kills: 7
Defensive kills: 1\`\`\`",
            },
            {
              "inline": true,
              "name": "gamertag0900000000000000",
              "value": "\`\`\`Rank: 4
Score: 2
Kills: 25
Deaths: 7
Assists: 7
KDA: 20.33
Headshot kills: 18
Shots H:F: 141:242
Accuracy: 58.26%
Damage D:T: 6010:4547
Av life duration: 1m 19s
Av damage/life: 858.57
Captures: 0
Occupation time: 53s
Secures: 0
Offensive kills: 7
Defensive kills: 1\`\`\`",
            },
            {
              "inline": false,
              "name": "
",
              "value": "
",
            },
            {
              "inline": false,
              "name": "Cobra",
              "value": "Team Score: 2",
            },
            {
              "inline": true,
              "name": "gamertag0800000000000000",
              "value": "\`\`\`Rank: 5
Score: 2
Kills: 10
Deaths: 26
Assists: 13
KDA: -11.66
Headshot kills: 5
Shots H:F: 127:267
Accuracy: 47.56%
Damage D:T: 5401:7155
Av life duration: 17s
Av damage/life: 207.73
Captures: 0
Occupation time: 35s
Secures: 0
Offensive kills: 2
Defensive kills: 2\`\`\`",
            },
            {
              "inline": true,
              "name": "gamertag1100000000000000",
              "value": "\`\`\`Rank: 5
Score: 2
Kills: 14
Deaths: 25
Assists: 10
KDA: -7.66
Headshot kills: 10
Shots H:F: 120:239
Accuracy: 50.2%
Damage D:T: 5135:6802
Av life duration: 17s
Av damage/life: 205.40
Captures: 0
Occupation time: 1m 29s
Secures: 0
Offensive kills: 3
Defensive kills: 3\`\`\`",
            },
            {
              "inline": false,
              "name": "
",
              "value": "
",
            },
            {
              "inline": true,
              "name": "gamertag1200000000000000",
              "value": "\`\`\`Rank: 5
Score: 2
Kills: 9
Deaths: 24
Assists: 10
KDA: -11.66
Headshot kills: 5
Shots H:F: 114:237
Accuracy: 48.1%
Damage D:T: 5525:6557
Av life duration: 19s
Av damage/life: 230.21
Captures: 0
Occupation time: 48s
Secures: 0
Offensive kills: 4
Defensive kills: 0\`\`\`",
            },
            {
              "inline": true,
              "name": "gamertag0400000000000000",
              "value": "\`\`\`Rank: 8
Score: 1
Kills: 30
Deaths: 23
Assists: 7
KDA: 9.33
Headshot kills: 19
Shots H:F: 170:297
Accuracy: 57.23%
Damage D:T: 7187:6850
Av life duration: 20s
Av damage/life: 312.48
Captures: 0
Occupation time: 47s
Secures: 0
Offensive kills: 5
Defensive kills: 4\`\`\`",
            },
            {
              "inline": false,
              "name": "
",
              "value": "
",
            },
          ],
          "title": "KOTH: Fake name for asset 336b5174-3579-4fd8-b2f0-922e4a5f7628",
          "url": "https://halodatahive.com/Infinite/Match/e20900f9-4c6c-4003-a175-00000000koth",
        },
      ],
    },
  ],
  [
    "fake-thread-id",
    {
      "embeds": [
        {
          "fields": [
            {
              "inline": false,
              "name": "Eagle",
              "value": "Team Score: 11",
            },
            {
              "inline": true,
              "name": "gamertag0300000000000000",
              "value": "\`\`\`Rank: 1
Score: 6
Kills: 3
Deaths: 9
Assists: 3
KDA: -5
Headshot kills: 1
Shots H:F: 66:404
Accuracy: 16.33%
Damage D:T: 1715:2612
Av life duration: 27s
Av damage/life: 190.56\`\`\`",
            },
            {
              "inline": true,
              "name": "gamertag0200000000000000",
              "value": "\`\`\`Rank: 2
Score: 5
Kills: 9
Deaths: 7
Assists: 6
KDA: 4
Headshot kills: 1
Shots H:F: 123:285
Accuracy: 43.15%
Damage D:T: 2418:2024
Av life duration: 36s
Av damage/life: 345.43\`\`\`",
            },
            {
              "inline": false,
              "name": "
",
              "value": "
",
            },
            {
              "inline": true,
              "name": "gamertag0100000000000000",
              "value": "\`\`\`Rank: 3
Score: 4
Kills: 9
Deaths: 10
Assists: 4
KDA: 0.33
Headshot kills: 4
Shots H:F: 114:237
Accuracy: 48.1%
Damage D:T: 2253:2526
Av life duration: 23s
Av damage/life: 225.30\`\`\`",
            },
            {
              "inline": true,
              "name": "gamertag0400000000000000",
              "value": "\`\`\`Rank: 3
Score: 4
Kills: 7
Deaths: 8
Assists: 6
KDA: 1
Headshot kills: 3
Shots H:F: 158:723
Accuracy: 21.85%
Damage D:T: 3774:2186
Av life duration: 36s
Av damage/life: 471.75\`\`\`",
            },
            {
              "inline": false,
              "name": "
",
              "value": "
",
            },
            {
              "inline": true,
              "name": "gamertag1200000000000000",
              "value": "\`\`\`Rank: 3
Score: 4
Kills: 4
Deaths: 10
Assists: 5
KDA: -4.33
Headshot kills: 1
Shots H:F: 61:161
Accuracy: 37.88%
Damage D:T: 1322:2416
Av life duration: 23s
Av damage/life: 132.20\`\`\`",
            },
            {
              "inline": true,
              "name": "gamertag0900000000000000",
              "value": "\`\`\`Rank: 6
Score: 2
Kills: 8
Deaths: 14
Assists: 3
KDA: -5
Headshot kills: 2
Shots H:F: 75:207
Accuracy: 36.23%
Damage D:T: 1846:3332
Av life duration: 14s
Av damage/life: 131.86\`\`\`",
            },
            {
              "inline": false,
              "name": "
",
              "value": "
",
            },
            {
              "inline": true,
              "name": "gamertag1300000000000000",
              "value": "\`\`\`Rank: 6
Score: 2
Kills: 7
Deaths: 8
Assists: 3
KDA: 0
Headshot kills: 1
Shots H:F: 123:316
Accuracy: 38.92%
Damage D:T: 2825:2306
Av life duration: 31s
Av damage/life: 353.13\`\`\`",
            },
            {
              "inline": true,
              "name": "gamertag1400000000000000",
              "value": "\`\`\`Rank: 6
Score: 2
Kills: 5
Deaths: 13
Assists: 3
KDA: -7
Headshot kills: 0
Shots H:F: 76:305
Accuracy: 24.91%
Damage D:T: 1243:3058
Av life duration: 16s
Av damage/life: 95.62\`\`\`",
            },
            {
              "inline": false,
              "name": "
",
              "value": "
",
            },
            {
              "inline": false,
              "name": "Cobra",
              "value": "Team Score: 8",
            },
            {
              "inline": true,
              "name": "gamertag0800000000000000",
              "value": "\`\`\`Rank: 9
Score: 4
Kills: 5
Deaths: 10
Assists: 2
KDA: -4.33
Headshot kills: 1
Shots H:F: 94:233
Accuracy: 40.34%
Damage D:T: 1847:2873
Av life duration: 27s
Av damage/life: 184.70\`\`\`",
            },
            {
              "inline": true,
              "name": "gamertag1000000000000000",
              "value": "\`\`\`Rank: 9
Score: 4
Kills: 11
Deaths: 6
Assists: 3
KDA: 6
Headshot kills: 4
Shots H:F: 107:299
Accuracy: 35.78%
Damage D:T: 2255:1904
Av life duration: 43s
Av damage/life: 375.83\`\`\`",
            },
            {
              "inline": false,
              "name": "
",
              "value": "
",
            },
            {
              "inline": true,
              "name": "gamertag0700000000000000",
              "value": "\`\`\`Rank: 11
Score: 3
Kills: 2
Deaths: 8
Assists: 5
KDA: -4.33
Headshot kills: 1
Shots H:F: 65:170
Accuracy: 38.23%
Damage D:T: 1131:2237
Av life duration: 31s
Av damage/life: 141.38\`\`\`",
            },
            {
              "inline": true,
              "name": "gamertag0500000000000000",
              "value": "\`\`\`Rank: 12
Score: 2
Kills: 6
Deaths: 6
Assists: 2
KDA: 0.66
Headshot kills: 3
Shots H:F: 160:386
Accuracy: 41.45%
Damage D:T: 1552:2026
Av life duration: 43s
Av damage/life: 258.67\`\`\`",
            },
            {
              "inline": false,
              "name": "
",
              "value": "
",
            },
            {
              "inline": true,
              "name": "gamertag0600000000000000",
              "value": "\`\`\`Rank: 12
Score: 2
Kills: 6
Deaths: 3
Assists: 0
KDA: 3
Headshot kills: 2
Shots H:F: 147:450
Accuracy: 32.66%
Damage D:T: 1051:1202
Av life duration: 1m 23s
Av damage/life: 350.33\`\`\`",
            },
            {
              "inline": true,
              "name": "gamertag1100000000000000",
              "value": "\`\`\`Rank: 12
Score: 2
Kills: 4
Deaths: 7
Assists: 6
KDA: -1
Headshot kills: 0
Shots H:F: 118:596
Accuracy: 19.79%
Damage D:T: 1975:1869
Av life duration: 36s
Av damage/life: 282.14\`\`\`",
            },
            {
              "inline": false,
              "name": "
",
              "value": "
",
            },
            {
              "inline": true,
              "name": "gamertag1600000000000000",
              "value": "\`\`\`Rank: 12
Score: 2
Kills: 29
Deaths: 6
Assists: 4
KDA: 24.33
Headshot kills: 20
Shots H:F: 197:314
Accuracy: 62.73%
Damage D:T: 7623:1989
Av life duration: 43s
Av damage/life: 1270.50\`\`\`",
            },
            {
              "inline": true,
              "name": "gamertag1500000000000000",
              "value": "\`\`\`Rank: 16
Score: 1
Kills: 16
Deaths: 6
Assists: 6
KDA: 12
Headshot kills: 7
Shots H:F: 202:418
Accuracy: 48.32%
Damage D:T: 3961:2231
Av life duration: 43s
Av damage/life: 660.17\`\`\`",
            },
            {
              "inline": false,
              "name": "
",
              "value": "
",
            },
          ],
          "title": "Land Grab: Fake name for asset a778ae21-a8ae-4569-acb5-898efbd4b3f3",
          "url": "https://halodatahive.com/Infinite/Match/32b4cddf-5451-4d83-bcf6-000land-grab",
        },
      ],
    },
  ],
]
`;

exports[`StatsCommand > execute() > neatqueue > jobToComplete > calls discordService.updateDeferredReply with series embeds 1`] = `
[
  "fake-token",
  {
    "embeds": [
      {
        "color": 3447003,
        "fields": [
          {
            "inline": true,
            "name": "Game",
            "value": "CTF: Empyrean - Ranked
KOTH: Fake name for asset 336b5174-3579-4fd8-b2f0-922e4a5f7628
Land Grab: Fake name for asset a778ae21-a8ae-4569-acb5-898efbd4b3f3",
          },
          {
            "inline": true,
            "name": "Duration",
            "value": "10m 58s
12m 12s
6m 38s",
          },
          {
            "inline": true,
            "name": "Score",
            "value": "3:0
3:2
11:8",
          },
        ],
        "title": "Series stats for queue #5",
        "url": "https://discord.com/channels/1238795949266964560/1234567890/1310523001611096064",
      },
    ],
  },
]
`;
